[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/Table.gd" type="Script" id=1]
[ext_resource path="res://sprites/tileset.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 13.5 )

[node name="Table" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 96, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 1 )

[node name="PosUp" type="Position2D" parent="."]
position = Vector2( 0, -22 )

[node name="PosLeft" type="Position2D" parent="."]
position = Vector2( -25, -3 )

[node name="PosRight" type="Position2D" parent="."]
position = Vector2( 26, -3 )

[node name="PosDown" type="Position2D" parent="."]
position = Vector2( 0, 18 )
